# tasks_service

./: README.md  docker-compose.yaml
comments_service/: .env  Dockerfile  pyproject.toml
comments_service/app/: main.py
comments_service/app/application/: dependencies.py
comments_service/app/application/api/: __init__.py  comments.py
comments_service/app/core/: dishka_container.py  enums.py
comments_service/app/core/config/: config.py  models.py
comments_service/app/core/dto/: __init__.py  comments.py  tasks.py
comments_service/app/core/providers/: __init__.py  base_provider.py  services_provider.py
comments_service/app/repository/implementations/: comments_repository.py
comments_service/app/repository/interfaces/: base.py  redis_repository.py
comments_service/app/services/: comments_service.py  exceptions.py
todo_app/: .env  Dockerfile  entrypoint.sh  pyproject.toml
todo_app/apps/: urls.py  utils.py
todo_app/apps/authentication/: admin.py  authentications.py  forms.py  manager.py  models.py  permissons.py  publisher.py  serializers.py  urls.py  utils.py  views.py
todo_app/apps/authentication/schema/: schema.py  serializers.py
todo_app/apps/authentication/tests/: test_integration.py  test_models.py  test_views.py  (+1 more)
todo_app/apps/tasks/: admin.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
todo_app/ssh_keys/: private.pem  public.pem
todo_app/todo_app/: config.py  settings.py  urls.py
todo_bot/: .env  Dockerfile  main.py  pyproject.toml
todo_bot/bot/: __main__.py
todo_bot/bot/application/: __init__.py  states.py
todo_bot/bot/core/: consumer.py  dishka_container.py  enums.py  menu.py
todo_bot/bot/key/: public.pem
todo_bot/bot/locales/: stub.pyi
todo_bot/bot/services/: base.py  comment_service.py  register_service.py  todo_service.py
(+53 files in other folders)
