[tool.poetry]
name = "todo-bot"
version = "0.1.0"
description = ""
authors = ["dmitriy <dmitriydmgora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiogram-dialog = "^2.2.0"
redis = "^5.0.8"
dishka = "^1.3.0"
environs = "^11.0.0"
fluentogram = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
